<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controller.TrackableDetailFragment">

    <LinearLayout
        android:id="@+id/id_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="19dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/trackable_id"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_value"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="16dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="19dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/trackable_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_value"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="16dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cate_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="19dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/trackable_cate"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cate_value"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="16dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/web_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="19dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/trackable_web"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/web_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_weight="2"
            android:autoLink="email|phone|web"
            android:padding="16dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/des_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="19dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/trackable_des"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/des_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/route_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="19dp"
            android:layout_weight="0"
            android:padding="10dp"
            android:text="@string/trackable_route"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/route_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
